--- a/app/src/main/res/layout/activity_logica_app.xml
+++ b/app/src/main/res/layout/activity_logica_app.xml
@@ -91,6 +91,7 @@
                 android:id="@+id/answerField1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:digits="TFtf"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:inputType="textPersonName"
                 android:maxLength="1"
@@ -127,6 +128,7 @@
                 android:id="@+id/answerField2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:digits="TFtf"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:inputType="textPersonName"
                 android:maxLength="1"
@@ -162,6 +164,7 @@
                 android:id="@+id/answerField3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:digits="TFtf"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:inputType="textPersonName"
                 android:maxLength="1"
@@ -197,6 +200,7 @@
                 android:id="@+id/answerField4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:digits="TFtf"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:inputType="textPersonName"
                 android:maxLength="1"
